Web Inspector: New rule button in the style sidebar is blurry and too dark https://bugs.webkit.org/show_bug.cgi?id=148108
Patch by Devin Rousso <drousso@apple.com> on 2015-09-01
Reviewed by Timothy Hatcher.

Added support for Plus and Minus icons on non-retina screens.
Also removed some CSS rules that no longer apply to anything.

* UserInterface/Images/Minus.svg:
* UserInterface/Images/NewTabPlus.svg:
* UserInterface/Images/Plus.svg: Removed.
* UserInterface/Images/Plus13.svg: Copied from Source/WebInspectorUI/UserInterface/Images/Plus.svg.
* UserInterface/Images/Plus15.svg: Copied from Source/WebInspectorUI/UserInterface/Images/Plus.svg.

* UserInterface/Views/CSSStyleDetailsSidebarPanel.css:
(.sidebar > .panel.details.css-style > .content + .options-container):
(.sidebar > .panel.details.css-style > .content + .options-container > .new-rule):

* UserInterface/Views/ProbeDetailsSidebarPanel.css:
(.details-section.probe-set .options > .probe-add):

* UserInterface/Views/RulesStyleDetailsPanel.css:
(.sidebar > .panel.details.css-style .rules .new-rule): Deleted.
(.sidebar > .panel.details.css-style .rules > *:first-child:matches(.new-rule)): Deleted.
(.sidebar > .panel.details.css-style > .content.filter-in-progress .new-rule): Deleted.
(.sidebar > .panel.details.css-style > .content:not(.filter-in-progress) > .rules > .new-rule + .style-declaration-section): Deleted.
(.sidebar > .panel.details.css-style > .content:not(.filter-in-progress) > .rules > .new-rule + .label): Deleted.
(.sidebar > .panel.details.css-style .rules .new-rule img): Deleted.
(.sidebar > .panel.details.css-style .rules .new-rule:hover): Deleted.
(.sidebar > .panel.details.css-style .rules .new-rule:active): Deleted.
(@media (-webkit-min-device-pixel-ratio: 2)): Deleted.
Removed CSS rules that no longer apply.  The new rule button was moved to the Styles sidebar.

* UserInterface/Views/ScopeChainDetailsSidebarPanel.css:
(.details-section.watch-expressions .options > .watch-expression-add):

* Us

--- a/Source/WebInspectorUI/UserInterface/Views/CSSStyleDetailsSidebarPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/CSSStyleDetailsSidebarPanel.css
@@ -67,6 +67,7 @@
 
 .sidebar > .panel.details.css-style > .content + .options-container {
     display: flex;
+    align-items: center;
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -80,10 +81,12 @@
 }
 
 .sidebar > .panel.details.css-style > .content + .options-container > .new-rule {
-    width: 17px;
-    height: 17px;
-    margin: 5px 0 5px 7px;
-    content: url(../Images/Plus.svg);
+    width: 15px;
+    min-width: 15px;
+    height: 15px;
+    margin-left: 6px;
+    content: url(../Images/Plus15.svg);
+    opacity: 0.7;
 }
 
 .sidebar > .panel.details.css-style > .content + .options-container > .filter-bar {
