--- a/Source/WebInspectorUI/UserInterface/Views/ProbeDetailsSidebarPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ProbeDetailsSidebarPanel.css
@@ -55,7 +55,7 @@
 }
 
 .details-section.probe-set .options > .probe-add {
-    content: url(../Images/Plus.svg);
+    content: url(../Images/Plus13.svg);
     height: 13px;
 }
 
