--- a/Source/WebInspectorUI/UserInterface/Views/ScopeChainDetailsSidebarPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ScopeChainDetailsSidebarPanel.css
@@ -35,7 +35,7 @@
 }
 
 .details-section.watch-expressions .options > .watch-expression-add {
-    content: url(../Images/Plus.svg);
+    content: url(../Images/Plus13.svg);
 }
 
 .details-section.watch-expressions .options > .watch-expression-clear {
